--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ target/
 *.iws
 *.iml
 *.ipr
+/data
 /src/main/resources/application.properties
 /src/test/java/code/vanilson/startup/config
 /src/test/resources/config/application-test.yml
